Bug 447108 - Timeline docker missing lock icon
Summary: Timeline docker missing lock icon
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Animation (other bugs)
Version First Reported In: 5.0.0-beta5
Platform: Other macOS
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-12-17 06:08 UTC by vanyossi
Modified: 2024-03-10 10:39 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description vanyossi 2021-12-17 06:08:11 UTC
on macOS the lock icon is missing making impossible to stop the docker from being moved.

Point 1 from https://krita-artists.org/t/fifth-5-beta-of-krita-5-0-released/32791/5
Comment 1 Ahab Greybeard 2021-12-21 16:00:45 UTC
I can Confirm that this is the case for the Timeline docker and the Animation Curves docker on appimages from 5.0.0-beta1 onwards.
4.4.8 does not have locks on the dockers. 5.0.0-beta1 does, except for the Timeline and Animation Curves.
Comment 2 Bug Janitor Service 2024-02-27 19:59:44 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/krita/-/merge_requests/2083
Comment 3 Dmitry Kazakov 2024-03-10 10:39:57 UTC
Git commit 0c865a890d8988181dbd9fd81ff257bc8c1571aa by Dmitry Kazakov, on behalf of Reinold Rojas.
Committed on 10/03/2024 at 10:38.
Pushed by dkazakov into branch 'master'.

Add lock functionality to animation dockers

M  +1    -0    libs/ui/CMakeLists.txt
M  +5    -0    libs/ui/KisMainWindow.cpp
M  +83   -21   libs/ui/widgets/kis_utility_title_bar.cpp
M  +7    -1    libs/ui/widgets/kis_utility_title_bar.h
A  +46   -0    libs/ui/widgets/kis_utility_title_bar_p.h  *

The files marked with a * at the end have a non valid license. Please read: https://community.kde.org/Policies/Licensing_Policy and use the headers which are listed at that page.


https://invent.kde.org/graphics/krita/-/commit/0c865a890d8988181dbd9fd81ff257bc8c1571aa