Add lock functionality to animation dockers

BUG:447108