libs/ui/widgets/kis_utility_title_bar.h
@@ -34,7 +34,7 @@ class KRITAUI_EXPORT KisUtilityTitleBar : public QWidget
 public:
     KisUtilityTitleBar(QWidget *parent = nullptr);
     KisUtilityTitleBar(QLabel *title, QWidget *parent = nullptr);
-
+    ~KisUtilityTitleBar();
     QSize sizeHint() const override
     {
         return QSize(32, 32);
@@ -43,10 +43,16 @@ public:
     QWidget* widgetArea();
     void setWidgetArea(QWidget* widgetArea);
 
+
+public Q_SLOTS:
+    void setLocked(bool locked);
 protected:
     QHBoxLayout *widgetAreaLayout;
 
     const int SPACING_UNIT = 16;
+
+    class Private;
+    Private * const d;
 };
 
 #endif // KISUTILITYTITLEBAR_H
